# codebank

./: README.md
bank/: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  docker-compose.yml  dockerfile  pyproject.toml
bank/src/: Makefile  run.py
bank/src/domain/dtos/hydrate_dtos/: hydrate_credit_card_dto.py  hydrate_transaction_dto.py
bank/src/domain/dtos/models/: CreditCard.py  Transaction.py
bank/src/domain/interfaces/: credit_cards_repository.py  transactions_repository.py
bank/src/domain/interfaces/controllers/: create_credit_card_controller.py  create_transaction_controller.py  get_transactions_by_card_number_controller.py  (+1 more)
bank/src/domain/models/: credit_card.py  transaction.py
bank/src/domain/usecases/: create_credit_card_usecase.py  create_transaction_usecase.py  get_credit_card_by_number_usecase.py  get_transactions_by_card_number_usecase.py  paginate_transactions_usecase.py
bank/src/errors/: grpc_request_error.py
bank/src/infra/config/: db_connection.py
bank/src/infra/kafka/: producer_kafka.py
bank/src/infra/migrations/: alembic.ini  env.py
bank/src/infra/models/: credit_card.py  transaction.py
bank/src/infra/repositories/: credit_cards_repository.py  transactions_repository.py
bank/src/main/composers/: create_credit_card_composer.py  create_transaction_composer.py  get_transactions_by_card_number_composer.py
bank/src/presenters/controllers/: create_credit_card_controller.py  create_transaction_controller.py  get_transactions_by_card_number_controller.py  paginate_transactions_controller.py
(+151 files in other folders)
