[tool.poetry]
name = "bank"
version = "0.1.0"
description = ""
authors = ["pauloreis7 <paulosilvadosreis2057@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
