[tool.poetry]
name = "bank"
version = "0.1.0"
description = ""
authors = ["pauloreis7 <paulosilvadosreis2057@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.14.5"
black = "^22.6.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
